# Yolov8_infer_code

v8total/bm1684/: main.cpp  main.py
v8total/libtorch/: main.py
v8total/ncnn/: CMakeLists.txt  classes.txt  main.cpp  v8s.py
v8total/onnx/: main.py
v8total/opencv/: CMakeLists.txt  main.cpp  main.py
v8total/openvino/: CMakeLists.txt  main.cpp  main.py  onte
v8total/openvino/yolov8n_openvino_model/: metadata.yaml  yolov8n.xml
v8total/pytorch/: main.py
v8total/rknn/: CMakeLists.txt  main.cpp  main.py  rktrans.py
v8total/tensorrt/: main.py
